scss/partials/_user_avatar.scss
$avatar_size: 32;

button.user-avatar-button{
  margin: 0;
  border: 0px solid transparent;
  background-color: transparent;
  width: #{$avatar_size + 16}px;
  height: #{$avatar_size}px;
  border-radius: #{$avatar-size / 2}px;
  padding: 0px 16px 0px 0px;
  position: relative;

  &:after {
    transition: transform 180ms;
  }

  &:hover, &[aria-expanded=true] {
    &:after {
      opacity: 1;
    }
  }

  &[aria-expanded=true] {
    &:after {
      transform: rotate(180deg);
    }
  }

  &:after {
    content: "";
    width: 9px;
    height: 6px;
    background-image: cdnUrl("/img/ML/user_menu_chevron.svg");
    background-size: 9px 6px;
    background-repeat: no-repeat;
    background-position: center;
    position: absolute;
    top: #{($avatar_size - 6) / 2}px;
    right: 0px;
    opacity: 0;
  }

  &.disabled-user-menu {
    cursor: default;
  }

  &:active, &:focus {
    outline: none;
    border: 0px solid tranparent;
  }

  @include user-profile($avatar_size);
}

